--- a/web3EthWallet-master/005_my/package.json
+++ b/web3EthWallet-master/005_my/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^2.6.1",
+    "ethereumjs-tx": "^2.1.2",
     "koa": "^2.5.2",
     "koa-body": "^4.0.4",
     "koa-router": "^7.4.0",
