--- a/dapp_java/src/main/resources/application-dev.yml
+++ b/dapp_java/src/main/resources/application-dev.yml
@@ -6,6 +6,9 @@ server:
 trx:
   terminal-url: 'http://localhost:3333'
   api-url: 'https://nile.trongrid.io/v1'
+  token-info:
+    symbol: 'YTN'
+    name: 'xb_coin'
 
 spring:
   datasource:
@@ -28,6 +31,18 @@ spring:
       mode: always
       continue-on-error: true
 
+  redis:
+    database: 0
+    host: 127.0.0.1
+    port: 6380
+    jedis:
+      pool:
+        max-active: 8
+        max-wait: -1
+        max-idle: 8
+        min-idle: 0
+    timeout: 2000
+    password: dream123
 
 #====================================mybatis-plus config===============================================
 mybatis-plus:
