--- a/dapp_api/package.json
+++ b/dapp_api/package.json
@@ -2,9 +2,12 @@
   "name": "mywallet",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "ecosystem.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "cross-env NODE_ENV=development PORT=3333 nodemon app.js",
+    "test": "pm2 start ecosystem.config.js --only test-implant --watch",
+    "release": "pm2 start ecosystem.config.js --only release-implant --watch",
+    "prod": "pm2 start ecosystem.config.js --only prod-implant --watch"
   },
   "author": "",
   "license": "ISC",
@@ -18,5 +21,8 @@
     "node-schedule": "^2.1.0",
     "sqlite3": "^5.0.8",
     "web3": "^1.0.0-beta.34"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
