--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "koa-views": "^6.1.4",
+    "nodemon": "^2.0.18",
     "tronweb": "^4.2.0",
     "web3": "^1.0.0-beta.34",
     "web3-eth-accounts": "^1.7.3"
