--- a/dapp_java/pom.xml
+++ b/dapp_java/pom.xml
@@ -17,7 +17,7 @@
         <java.version>1.8</java.version>
         <jwt.version>0.10.7</jwt.version>
         <guava.version>28.1-jre</guava.version>
-        <dozermapper.version>6.5.0</dozermapper.version>
+        <dozermapper.version>6.4.0</dozermapper.version>
         <redis.version>2.4.0</redis.version>
         <elasticsearch.version>7.17.1</elasticsearch.version>
     </properties>
@@ -25,6 +25,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
 
         <dependency>
@@ -96,10 +100,16 @@
             <version>${guava.version}</version>
         </dependency>
 
+<!--        <dependency>-->
+<!--            <groupId>com.github.dozermapper</groupId>-->
+<!--            <artifactId>dozer-core</artifactId>-->
+<!--            <version>${dozermapper.version}</version>-->
+<!--        </dependency>-->
+        <!-- https://mvnrepository.com/artifact/net.sf.dozer/dozer -->
         <dependency>
-            <groupId>com.github.dozermapper</groupId>
-            <artifactId>dozer-core</artifactId>
-            <version>${dozermapper.version}</version>
+            <groupId>net.sf.dozer</groupId>
+            <artifactId>dozer</artifactId>
+            <version>5.5.1</version>
         </dependency>
 
         <!--     swagger3    -->
@@ -141,7 +151,11 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
             <version>${redis.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.8.0</version>
+        </dependency>
         <!--     elasticsearch    -->
 <!--        <dependency>-->
 <!--            <groupId>org.elasticsearch.client</groupId>-->
