--- a/dapp_java/src/main/resources/application-company.yml
+++ b/dapp_java/src/main/resources/application-company.yml
@@ -12,7 +12,7 @@ trx:
 
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/cb?useSSL=false&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&tinyInt1isBit=false&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://127.0.0.1:3306/cb?useSSL=false&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&tinyInt1isBit=false&serverTimezone=Asia/Shanghai&zeroDateTimeBehavior=convertToNull
     username: root
     password: ^qaz123@hm!@#$
     driver-class-name: com.mysql.cj.jdbc.Driver
