--- a/cb_v1/src/main/resources/application-dev.yml
+++ b/cb_v1/src/main/resources/application-dev.yml
@@ -12,7 +12,7 @@ trx:
 
 spring:
   datasource:
-    url: jdbc:mysql://192.168.0.150:3306/cb?useSSL=false&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&tinyInt1isBit=false&serverTimezone=Asia/Shanghai&zeroDateTimeBehavior=convertToNull
+    url: jdbc:mysql://192.168.0.150:3306/cb_v1?useSSL=false&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&tinyInt1isBit=false&serverTimezone=Asia/Shanghai&zeroDateTimeBehavior=convertToNull
     username: root
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
