--- a/cb_v1/src/main/resources/application-prod.yml
+++ b/cb_v1/src/main/resources/application-prod.yml
@@ -13,7 +13,7 @@ trx:
 
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/cb?useSSL=false&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&tinyInt1isBit=false&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://127.0.0.1:3306/cb_v1?useSSL=false&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&tinyInt1isBit=false&serverTimezone=Asia/Shanghai
     username: root
     password: ^qaz123@hm!@#$
     driver-class-name: com.mysql.cj.jdbc.Driver
