--- a/01_doc/deploy/es/docker-compose.yml
+++ b/01_doc/deploy/es/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.12.1
+    image: elasticsearch:7.12.1
     container_name: es
     restart: always
     privileged: true
@@ -17,4 +17,4 @@ services:
         soft: -1
         hard: -1
     volumes:
-      - ./es-data:/usr/share/elasticsearch/data
+      - ./data:/usr/share/elasticsearch/data
