--- a/cb_v1/src/main/resources/application-prod.yml
+++ b/cb_v1/src/main/resources/application-prod.yml
@@ -10,6 +10,10 @@ trx:
     symbol: 'USDT'
     name: 'Tether USD'
 
+interceptor:
+  exclude:
+    path: "/error/**,/v3/**,/webjars/**,/swagger-resources/**,/swagger-ui/**,/admin/index/login"
+
 
 spring:
   datasource:
