--- a/cb_v1/src/main/resources/application-company.yml
+++ b/cb_v1/src/main/resources/application-company.yml
@@ -10,6 +10,12 @@ trx:
     symbol: 'YTN'
     name: 'xb_coin'
 
+
+interceptor:
+  exclude:
+    path: "/error/**,/v3/**,/webjars/**,/swagger-resources/**,/swagger-ui/**,/admin/index/login"
+
+
 spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/cb_v1?useSSL=false&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&tinyInt1isBit=false&serverTimezone=Asia/Shanghai&zeroDateTimeBehavior=convertToNull
