--- a/cb_api/package.json
+++ b/cb_api/package.json
@@ -20,7 +20,9 @@
     "node-schedule": "^2.1.0",
     "nodemon": "^2.0.18",
     "sqlite3": "^5.0.8",
-    "web3": "^1.0.0-beta.34"
+    "tronweb": "^4.2.0",
+    "web3": "^1.0.0-beta.34",
+    "web3-eth-accounts": "^1.7.3"
   },
   "devDependencies": {
     "cross-env": "^7.0.3"
