--- a/cb_v2/src/main/resources/application-company.yml
+++ b/cb_v2/src/main/resources/application-company.yml
@@ -6,7 +6,9 @@ server:
 trx:
   terminal-url: 'http://localhost:3333'
   api-url: 'https://nile.trongrid.io/v1'
+  symbol: 'TRX'
   token-info:
+    contract-address: 'TZ5YTid3VphzLpgwSks24KFuyL7wgxuEBR'
     symbol: 'YTN'
     name: 'xb_coin'
 
