--- a/cb_v2/src/main/resources/application-prod.yml
+++ b/cb_v2/src/main/resources/application-prod.yml
@@ -34,6 +34,9 @@ scheduled:
       record: true
       account: true
 
+upload:
+  path: '/Users/zhangjie/jack/web3app/web3app_2019/cb_v2/upload/images'
+
 
 spring:
   datasource:
