--- a/cb_v2/src/main/resources/application-company.yml
+++ b/cb_v2/src/main/resources/application-company.yml
@@ -4,6 +4,7 @@ server:
 
 
 trx:
+  network: 'nile'
   terminal-url: 'http://localhost:3333'
   api-url: 'https://nile.trongrid.io/v1'
   symbol: 'TRX'
@@ -20,11 +21,16 @@ interceptor:
 scheduled:
   enable:
     register: false
-    transfer: true
-    settle: true
+    transfer: false
+    settle: false
     finance:
-      record: true
-      account: true
+      record: false
+      account: false
+    offline:
+      bet: false
+      settle: false
+    system:
+      flow: false
 
 upload:
   path: '/Users/zhangjie/jack/web3app/web3app_2019/cb_v2/upload/images'
