--- a/cb_v2/src/main/resources/application-prod.yml
+++ b/cb_v2/src/main/resources/application-prod.yml
@@ -4,6 +4,7 @@ server:
 
 
 #trx:
+#  network: 'main'
 #  terminal-url: 'http://localhost:3333'
 #  api-url: 'https://nile.trongrid.io/v1'
 #  token-info:
@@ -12,6 +13,7 @@ server:
 #    name: 'Tether USD'
 
 trx:
+  network: 'nile'
   terminal-url: 'http://localhost:3333'
   api-url: 'https://nile.trongrid.io/v1'
   symbol: 'TRX'
@@ -27,12 +29,17 @@ interceptor:
 
 scheduled:
   enable:
-    register: true
-    transfer: true
-    settle: true
+    register: false
+    transfer: false
+    settle: false
     finance:
-      record: true
-      account: true
+      record: false
+      account: false
+    offline:
+      bet: false
+      settle: false
+    system:
+      flow: false
 
 upload:
   path: '/Users/zhangjie/jack/web3app/web3app_2019/cb_v2/upload/images'
