--- a/cb_v2/pom.xml
+++ b/cb_v2/pom.xml
@@ -172,6 +172,13 @@
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.anji-plus</groupId>
+            <artifactId>spring-boot-starter-captcha</artifactId>
+            <version>1.3.0</version>
+        </dependency>
+
         <!--     elasticsearch    -->
 <!--        <dependency>-->
 <!--            <groupId>org.elasticsearch.client</groupId>-->
