--- a/cb_v2/src/main/resources/application-prod.yml
+++ b/cb_v2/src/main/resources/application-prod.yml
@@ -32,6 +32,8 @@ scheduled:
     register: false
     transfer: false
     settle: false
+    agent:
+      commission: false
     finance:
       record: false
       account: false
