--- a/cb_v2/src/main/resources/application-company.yml
+++ b/cb_v2/src/main/resources/application-company.yml
@@ -24,7 +24,7 @@ scheduled:
     transfer: false
     settle: false
     agent:
-      commission: true
+      commission: false
     finance:
       record: false
       account: false
