--- a/cb_v2/src/main/resources/application-prod.yml
+++ b/cb_v2/src/main/resources/application-prod.yml
@@ -31,7 +31,7 @@ scheduled:
   enable:
     register: false
     transfer: false
-    settle: false
+    settle: true
     agent:
       commission: false
     finance:
