--- a/cb_v2/src/main/resources/application-dev.yml
+++ b/cb_v2/src/main/resources/application-dev.yml
@@ -22,7 +22,7 @@ scheduled:
   enable:
     register: false
     transfer: false
-    settle: false
+    settle: true
     agent:
       commission: false
     finance:
