--- a/cb_v2/src/main/resources/application-dev.yml
+++ b/cb_v2/src/main/resources/application-dev.yml
@@ -24,7 +24,7 @@ scheduled:
     transfer: false
     settle: true
     agent:
-      commission: false
+      commission: true
     finance:
       record: false
       account: false
