--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "koa-static": "^5.0.0",
     "koa-views": "^6.1.4",
     "nodemon": "^2.0.18",
+    "request": "^2.88.2",
     "tronweb": "^4.2.0",
     "web3": "^1.0.0-beta.34",
     "web3-eth-accounts": "^1.7.3"
